--- a/laundry.html
+++ b/laundry.html
@@ -34,5 +34,8 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+    //Your JS goes here
+    </script>
   </body>
 </html>
