Update table with test data

--- a/laundry.html
+++ b/laundry.html
@@ -16,18 +16,26 @@
   <body>
     <h1>Laundry Timers</h1>
     
-    <table class="table">
+    <table class="table" id="table">
         <tr>
-            <th>Load ID</th>
             <th>Load Type</th>
             <th>Time Remaining</th>
-            <th>Actions</th>
         </tr>
         <tr>
-            <td>0</td>
-            <td>Washing Machine</td>
-            <td>5:66</td>
-            <td>Buttons go here</td>
+            <td class="type">Washing Machine</td>
+            <td class="timer">9:11</td>
+        </tr>
+        <tr>
+            <td class="type">Washing Machine</td>
+            <td class="timer">12:33</td>
+        </tr>
+        <tr>
+            <td class="type">Dryer</td>
+            <td class="timer">54:44</td>
+        </tr>
+        <tr>
+            <td class="type">Dryer</td>
+            <td class="timer">0:03</td>
         </tr>
     </table>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
